yellow and navbar colors

--- a/assets/css/hofmann.scss
+++ b/assets/css/hofmann.scss
@@ -1,7 +1,7 @@
 //COLOR SET
 $background: #E06B65; //topbar color
 $red: #E06B65;
-$yellow: #FFFF99;
+$yellow: #FEEB96;
 $green: #99CC99;
 $blue: #99CCFF;
 $gray: #C4C4C4;
