--- a/assets/css/projectsv15.scss
+++ b/assets/css/projectsv15.scss
@@ -1,7 +1,7 @@
 // COLOR SET
 
 $red: #E06B65;
-$yellow: #FFEE52;
+$yellow: #FEEB96;
 $green: #99CC99;
 $blue: #99CCFF;
 $gray: #787878;
@@ -183,18 +183,6 @@ h3 {
 .navbar-light .navbar-nav .nav-link:hover {
   color: $gray;
   border-color: $gray;
-}
-
-a.about {
-  border-bottom: solid $green;
-}
-
-a.members {
-  border-bottom: solid $blue;
-}
-
-a.projects {
-  border-bottom: solid $red;
 }
 
 a {
