--- a/assets/css/hofmann.css
+++ b/assets/css/hofmann.css
@@ -36,7 +36,7 @@
 }
 
 .p2 {
-  border-color: #FFFF99;
+  border-color: #FEEB96;
 }
 
 .p3 {
@@ -56,9 +56,9 @@
 }
 
 .pspecial {
-  -o-border-image: linear-gradient(to bottom, #99CCFF 16.3%, #FFFF99 16.3%, #FFFF99 32.5%, #E06B65 32.5%, #E06B65 48.7%, #99CC99 48.7%, #99CC99 64.9%, #C4C4C4 64.9%, #C4C4C4 81.1%, #202020 81.1%);
-     border-image: -webkit-gradient(linear, left top, left bottom, color-stop(16.3%, #99CCFF), color-stop(16.3%, #FFFF99), color-stop(32.5%, #FFFF99), color-stop(32.5%, #E06B65), color-stop(48.7%, #E06B65), color-stop(48.7%, #99CC99), color-stop(64.9%, #99CC99), color-stop(64.9%, #C4C4C4), color-stop(81.1%, #C4C4C4), color-stop(81.1%, #202020));
-     border-image: linear-gradient(to bottom, #99CCFF 16.3%, #FFFF99 16.3%, #FFFF99 32.5%, #E06B65 32.5%, #E06B65 48.7%, #99CC99 48.7%, #99CC99 64.9%, #C4C4C4 64.9%, #C4C4C4 81.1%, #202020 81.1%);
+  -o-border-image: linear-gradient(to bottom, #99CCFF 16.3%, #FEEB96 16.3%, #FEEB96 32.5%, #E06B65 32.5%, #E06B65 48.7%, #99CC99 48.7%, #99CC99 64.9%, #C4C4C4 64.9%, #C4C4C4 81.1%, #202020 81.1%);
+     border-image: -webkit-gradient(linear, left top, left bottom, color-stop(16.3%, #99CCFF), color-stop(16.3%, #FEEB96), color-stop(32.5%, #FEEB96), color-stop(32.5%, #E06B65), color-stop(48.7%, #E06B65), color-stop(48.7%, #99CC99), color-stop(64.9%, #99CC99), color-stop(64.9%, #C4C4C4), color-stop(81.1%, #C4C4C4), color-stop(81.1%, #202020));
+     border-image: linear-gradient(to bottom, #99CCFF 16.3%, #FEEB96 16.3%, #FEEB96 32.5%, #E06B65 32.5%, #E06B65 48.7%, #99CC99 48.7%, #99CC99 64.9%, #C4C4C4 64.9%, #C4C4C4 81.1%, #202020 81.1%);
   border-image-slice: 0% 0% 0% 100%;
   border-top: 0;
   border-bottom: 0;
