--- a/assets/css/makerspace.scss
+++ b/assets/css/makerspace.scss
@@ -1,7 +1,7 @@
 //COLOR SET
 $background: #8C4C7E; // topbar color
 $red: #E06B65;
-$yellow: #FFEE52;
+$yellow: #FEEB96;
 $green: #99CC99;
 $blue: #99CCFF;
 $gray: #C4C4C4;
