--- a/assets/css/stylesv15.css
+++ b/assets/css/stylesv15.css
@@ -157,7 +157,7 @@ nav {
 }
 
 .footer-icon-2:hover {
-  color: #FFEE52;
+  color: #FEEB96;
 }
 
 .footer-icon-3:hover {
@@ -166,6 +166,22 @@ nav {
 
 .footer-icon-4:hover {
   color: #99CCFF;
+}
+
+a.about {
+  border-bottom: solid #E06B65;
+}
+
+a.members {
+  border-bottom: solid #FEEB96;
+}
+
+a.projects {
+  border-bottom: solid #99CC99;
+}
+
+a.contact {
+  border-bottom: solid #99CCFF;
 }
 
 @media (min-width: 576px) {
@@ -269,18 +285,6 @@ nav {
     height: 15vh;
     min-height: 30vw;
     max-height: 100vh;
-  }
-  a.about {
-    border-bottom: solid #99CC99;
-  }
-  a.members {
-    border-bottom: solid #99CCFF;
-  }
-  a.projects {
-    border-bottom: solid #E06B65;
-  }
-  a.contact {
-    border-bottom: solid #FFEE52;
   }
   #about {
     padding-top: 10vh;
