--- a/assets/css/thrive.scss
+++ b/assets/css/thrive.scss
@@ -1,8 +1,7 @@
 //COLOR SET
 $background: #38849A; // topbar color
 $red: #E06B65;
-$yellow: #FFFF99;
-$yellow2: #FFEE52;
+$yellow: #FEEB96;
 $green: #99CC99;
 $blue: #99CCFF;
 $dark-blue:#838EBF;
@@ -36,7 +35,7 @@ $brown: #D9A38D;
 }
 
 .p2 {
-    border-color: $yellow2; // color of second teammember
+    border-color: $yellow; // color of second teammember
 }
 
 .p3 {
