--- a/assets/css/webteam.css
+++ b/assets/css/webteam.css
@@ -150,7 +150,7 @@ h2 {
 }
 
 .yellow {
-  border: 4px solid #FFEE52;
+  border: 4px solid #FEEB96;
 }
 
 a {
@@ -261,8 +261,8 @@ p {
             transition-timing-function: ease-in-out;
   }
   .dot.yellow:hover {
-    background-color: #FFEE52;
-    border-color: #FFEE52;
+    background-color: #FEEB96;
+    border-color: #FEEB96;
     -webkit-transition-timing-function: ease-in-out;
             transition-timing-function: ease-in-out;
   }
