--- a/assets/css/catheter.scss
+++ b/assets/css/catheter.scss
@@ -1,5 +1,5 @@
 //COLOR SET
-$background: #E95633; //CHANGE to topbar color
+$background: #D6392E; //topbar color
 $red: #E06B65;
 $yellow: #FEEB96;
 $green: #99CC99;
@@ -29,21 +29,21 @@ $black: #202020;
 }
 
 .p1 {
-    border-color: $red; //CHANGE to color of first teammember
+    border-color: $red; //color of first teammember
 }
 
 .p2 {
-    border-color: $yellow; //CHANGE to color of second teammember
+    border-color: $yellow; //color of second teammember
 }
 
 .p3 {
-    border-color: $green; //CHANGE to color of third teammember
+    border-color: $green; //color of third teammember
 }
 
 .p4 {
-    border-color: $blue; //CHANGE to color of fourth teammember
+    border-color: $blue; //color of fourth teammember
 }
 
 .p5 {
-    border-color: $gray; //CHANGE to color of fifth teammember
+    border-color: $gray; //color of fifth teammember
 }
