--- a/assets/css/projectsv15.css
+++ b/assets/css/projectsv15.css
@@ -180,6 +180,10 @@ a {
   color: #202020;
 }
 
+.proj-subheader {
+  text-align: left;
+}
+
 @media (min-width: 576px) {
   #teaminfo {
     visibility: hidden;
