--- a/assets/css/about.scss
+++ b/assets/css/about.scss
@@ -41,9 +41,9 @@ body {
 
 h1 {
   text-align: center;
-  font-size: 3.3vw;
   font-weight: bold;
   font-style: normal;
+  font-size: 7vw;
 }
 
 h2 {
@@ -173,6 +173,11 @@ a {
   color: $black;
 }
 
+.invent {
+  visibility: hidden;
+  display: none;
+}
+
 @media (min-width: 576px) {
 
   #container {
@@ -280,7 +285,7 @@ a {
     text-align: center;
     font-weight: bold;
     padding-bottom: 0.4rem;
-    font-size: 50px;
+    font-size: 7vh;
   }
 
   h2 {
@@ -385,6 +390,11 @@ a {
   #inventmobile {
     visibility: hidden;
     display: none;
+  }
+
+  .invent {
+    visibility: visible;
+    display: block;
   }
 
 }
@@ -536,7 +546,6 @@ a {
     text-align: center;
     font-weight: bold;
     padding-bottom: 0.4rem;
-    font-size: 50px;
   }
 
   h2 {
