--- a/assets/css/membersv15.scss
+++ b/assets/css/membersv15.scss
@@ -19,6 +19,7 @@ body {
     position: absolute;
     bottom: 100px;
 }
+
 .galaxy-img {
     width: 100%;
     height: auto;
@@ -89,9 +90,9 @@ h6 {
 p.header {
     font-weight: normal;
 }
-  
+
 h1 {
-    font-size: 3.3vw;
+    font-size: 7vw;
     font-weight: bold;
     font-style: normal;
 }
@@ -114,7 +115,7 @@ h2 {
     font-weight: bold;
     margin-bottom: 1vh;
 }
-  
+
 .dot {
     height: 8vw;
     width: 8vw;
@@ -126,6 +127,7 @@ h2 {
     min-height: 100px;
     min-width: 100px;
 }
+
 .quote {
     position: absolute;
     width: 85%;
@@ -138,7 +140,8 @@ h2 {
     opacity: 0;
 }
 
-.team > .container, .exec> .container{
+.team>.container,
+.exec>.container {
     text-align: center;
     margin-bottom: 1vh;
 }
@@ -148,10 +151,14 @@ h2 {
     font-style: normal;
 }
 
-div.col-4.col-sm-3, div.col-6.col-sm-3, div.col-4.col-sm-4, div.col-6.col-sm-3, div.col-6.col-sm-4 {
-      padding: 5vh 0 0 0;
+div.col-4.col-sm-3,
+div.col-6.col-sm-3,
+div.col-4.col-sm-4,
+div.col-6.col-sm-3,
+div.col-6.col-sm-4 {
+    padding: 5vh 0 0 0;
 }
-  
+
 .member {
     position: absolute;
     top: 50%;
@@ -207,9 +214,11 @@ p {
         height: 12vw;
         width: 12vw;
     }
+
     .galaxy {
         bottom: 50px;
     }
+
     .helmet-img-2 {
         transform: translate(87vw, -140vh) rotate(20deg);
     }
@@ -219,25 +228,30 @@ p {
     .helmet-img-2 {
         transform: translate(87vw, -100vh) rotate(20deg);
     }
+
     .quote {
         font-weight: bold;
         font-size: 0.2rem;
     }
+
     .role {
         display: block;
         visibility: visible;
     }
+
     .stars-img-1 {
         width: 15vw;
     }
-    
+
     .stars-img-2 {
         width: 18vw;
         margin-left: 82vw;
     }
-    // h1 {
-    //     font-size: 4rem;
-    // }
+
+    h1 {
+        font-size: 7vh;
+    }
+
     h2 {
         font-size: 2rem;
     }
@@ -247,44 +261,56 @@ p {
     .helmet-img-2 {
         transform: translate(87vw, -200vh) rotate(20deg);
     }
+
     .header {
         margin-bottom: 5vh;
     }
+
     h2 {
         margin-bottom: 5vh;
     }
-    .team > .container, .exec> .container{
+
+    .team>.container,
+    .exec>.container {
         margin-bottom: 5vh;
     }
+
     .dot.red:hover {
         background-color: $red;
         border-color: $red;
         transition-timing-function: ease-in-out;
     }
+
     .dot.green:hover {
         background-color: $green;
         border-color: $green;
         transition-timing-function: ease-in-out;
     }
+
     .dot.blue:hover {
         background-color: $blue;
         border-color: $blue;
         transition-timing-function: ease-in-out;
     }
+
     .dot.yellow:hover {
         background-color: $yellow;
         border-color: $yellow;
         transition-timing-function: ease-in-out;
     }
+
     .img-container:hover {
         opacity: 0.2;
     }
+
     .quote {
         opacity: 1;
     }
+
     .quote:hover {
         z-index: 1;
     }
+
     p {
         font-size: 1rem;
     }
