--- a/assets/css/mainscrollv15.css
+++ b/assets/css/mainscrollv15.css
@@ -70,14 +70,14 @@ p {
 .landing {
   position: relative;
   width: 100%;
-  height: 60vw;
+  height: 52vw;
 }
 
 .planets {
   width: 100%;
   height: auto;
   position: absolute;
-  bottom: 100px;
+  top: 220vw;
   z-index: -1;
 }
 
@@ -112,14 +112,15 @@ p {
   display: block;
   margin: 0 auto;
   padding-top: 1.5rem;
-  width: 40%;
+  padding-bottom: 1.5rem;
+  width: 20%;
   height: auto;
 }
 
 .about-section {
   position: relative;
   margin-top: 5vw;
-  height: 100vw;
+  height: 85vw;
 }
 
 .members-section {
@@ -131,7 +132,7 @@ p {
 .projects-section {
   position: relative;
   margin-top: 0;
-  height: 100vw;
+  height: 60vw;
 }
 
 .about-img {
@@ -234,10 +235,38 @@ img {
 
 @media (min-width: 576px) {
   .pencil {
-    padding-top: 2rem;
+    padding-top: 2.75rem;
   }
   .landing {
     height: 60vw;
+  }
+  .about-section {
+    height: 80vw;
+    margin-top: 5vw;
+  }
+  .members-section {
+    height: 60vw;
+  }
+  .projects-section {
+    height: 50vw;
+  }
+  .about-img {
+    top: -25vw;
+  }
+  .planets {
+    top: 165vw;
+  }
+  .clouds {
+    top: 130vw;
+  }
+}
+
+@media (min-width: 768px) {
+  .pencil {
+    padding-top: 3rem;
+  }
+  .landing {
+    height: 53vw;
   }
   .about-section {
     height: 80vw;
@@ -252,39 +281,11 @@ img {
   .about-img {
     top: -25vw;
   }
-  .planets {
-    bottom: 50px;
-  }
   .clouds {
-    top: 110vw;
-  }
-}
-
-@media (min-width: 768px) {
-  .pencil {
-    padding-top: 3rem;
-  }
-  .landing {
-    height: 60vw;
-  }
-  .about-section {
-    height: 90vw;
-    margin-top: 5vw;
-  }
-  .members-section {
-    height: 60vw;
-  }
-  .projects-section {
-    height: 70vw;
-  }
-  .about-img {
-    top: -25vw;
+    top: 130vw;
   }
   .planets {
-    bottom: 50px;
-  }
-  .clouds {
-    top: 120vw;
+    top: 165vw;
   }
 }
 
@@ -303,16 +304,13 @@ img {
     height: 60vw;
   }
   .projects-section {
-    height: 80vw;
+    height: 60vw;
   }
   .about-img {
     top: -30vw;
   }
-  .planets {
-    bottom: 50px;
-  }
   .clouds {
-    top: 102vw;
+    top: 130vw;
   }
 }
 
@@ -334,13 +332,13 @@ img {
     height: 50vw;
   }
   .projects-section {
-    height: 80vw;
+    height: 55vw;
   }
   .about-img {
     top: -30vw;
   }
   .planets {
-    bottom: 50px;
+    top: 150vw;
   }
   .clouds {
     top: 120vw;
