--- a/assets/css/mainscrollv15.scss
+++ b/assets/css/mainscrollv15.scss
@@ -91,7 +91,7 @@ p {
 .landing{
     position: relative;
     width: 100%;
-    height: 60vw;
+    height: 52vw;
 }
 
 // ABOUT & PILLARS
@@ -100,7 +100,7 @@ p {
     width: 100%;
     height: auto;
     position: absolute;
-    bottom: 100px;
+    top: 220vw;
     z-index: -1;
 }
 .planets-img {
@@ -114,6 +114,7 @@ p {
     position: absolute;
     top: 160vw;
 }
+
 .clouds-img {
     width: 100%;
     height: auto;
@@ -132,14 +133,15 @@ p {
     display: block;
     margin: 0 auto;
     padding-top: 1.5rem;
-    width: 40%;
+    padding-bottom: 1.5rem;
+    width: 20%;
     height: auto;
 }
 
 .about-section {
     position: relative;
     margin-top: 5vw;
-    height: 100vw;
+    height: 85vw;
 }
 
 .members-section {
@@ -151,7 +153,7 @@ p {
 .projects-section {
     position: relative;
     margin-top: 0;
-    height: 100vw;
+    height: 60vw;
 }
 
 .about-img {
@@ -264,11 +266,48 @@ img {
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
     .pencil {
-        padding-top: 2rem;
+        padding-top: 2.75rem;
     }
 
     .landing {
         height: 60vw;
+    }
+
+    .about-section {
+        height: 80vw;
+        margin-top: 5vw;
+    }
+
+    .members-section {
+        height: 60vw;
+    }
+
+    .projects-section {
+        height: 50vw;
+    }
+
+    .about-img {
+        top: -25vw;
+    }
+
+    .planets {
+        top: 165vw;
+    }
+
+    .clouds {
+        top: 130vw;
+    }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+
+    .pencil {
+        padding-top: 3rem;
+    }
+
+    .landing {
+        height: 53vw;
     }
 
     .about-section {
@@ -288,49 +327,12 @@ img {
         top: -25vw;
     }
 
-    .planets {
-        bottom: 50px;
-    }
-
     .clouds {
-        top: 110vw;
-    }
-}
-
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {
-
-    .pencil {
-        padding-top: 3rem;
-    }
-
-    .landing {
-        height: 60vw;
-    }
-
-    .about-section {
-        height: 90vw;
-        margin-top: 5vw;
-    }
-
-    .members-section {
-        height: 60vw;
-    }
-
-    .projects-section {
-        height: 70vw;
-    }
-
-    .about-img {
-        top: -25vw;
+        top: 130vw;
     }
 
     .planets {
-        bottom: 50px;
-    }
-
-    .clouds {
-        top: 120vw;
+        top: 165vw;
     }
 }
 
@@ -355,19 +357,19 @@ img {
     }
 
     .projects-section {
-        height: 80vw;
+        height: 60vw;
     }
 
     .about-img {
         top: -30vw;
     }
 
-    .planets {
-        bottom: 50px;
-    }
+    // .planets {
+    //     bottom: 50px;
+    // }
 
     .clouds {
-        top: 102vw;
+        top: 130vw;
     }
 }
 
@@ -396,7 +398,7 @@ img {
     }
 
     .projects-section {
-        height: 80vw;
+        height: 55vw;
     }
 
     .about-img {
@@ -404,7 +406,7 @@ img {
     }
 
     .planets {
-        bottom: 50px;
+        top: 150vw;
     }
 
     .clouds {
