--- a/assets/css/projectsv15.scss
+++ b/assets/css/projectsv15.scss
@@ -216,29 +216,31 @@ a {
   font-style: italic;
 }
 
-.interested {
-  text-align: right;
+// .interested {
+//   margin-top: 2rem;
+//   margin-bottom: 2rem;
+// }
+
+.margins {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
-.really-interested {
-  display: inline-block;
-  vertical-align: middle;
-  line-height: 40px;
+.padding-away {
+  padding: 0;
 }
 
 #contact-button {
   text-align: center !important;
   display: inline-block;
   color: white;
-  font-size: 1.25vw;
+  font-size: 1rem;
   // text-shadow: 2px 2px 6px $black;
   border-radius: 1em;
   padding: 0.75em 2em;
-  margin-top: 2.5em;
-  // position: absolute;
+  // margin-top: 2.5em;
+  position: absolute;
   // left: 50%;
-  // -ms-transform: translate(-50%, -50%);
-  // transform: translate(-50%, -50%);
   border: solid $blue;
   background: $blue;
 }
