--- a/assets/css/mainscrollv15.css
+++ b/assets/css/mainscrollv15.css
@@ -211,17 +211,16 @@ p {
 
 .project-planet {
   position: absolute;
-  height: 225%;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 200%;
+  height: 180%;
 }
 
 .project-link {
-  width: 25vw;
   height: auto;
+  z-index: 1;
 }
 
 img {
