--- a/assets/css/anindividualproj15.css
+++ b/assets/css/anindividualproj15.css
@@ -76,7 +76,6 @@ h7 {
 .user-txt {
   margin-left: auto;
   margin-right: auto;
-  width: 20vw;
   text-align: center;
   max-width: 95%;
 }
@@ -153,12 +152,18 @@ h5 {
 
 .subtitle {
   padding-bottom: 1rem;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .question {
   padding-top: 15px;
   margin-bottom: 10px;
   min-height: 40px;
+}
+
+.delivtitle {
+  max-width: 100%;
 }
 
 .topbar-img {
@@ -318,6 +323,10 @@ ul {
   }
   #underline1 {
     width: 8.8rem;
+  }
+  .subtitle {
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
