--- a/assets/css/anindividualproj15.scss
+++ b/assets/css/anindividualproj15.scss
@@ -71,7 +71,7 @@ h7 {
 .user-txt {
     margin-left: auto;
     margin-right: auto;
-    width: 20vw;
+    // width: 20vw;
     text-align: center;
     max-width: 95%;
 }
@@ -149,6 +149,8 @@ h5 {
 
 .subtitle {
     padding-bottom: 1rem;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .question {
@@ -157,6 +159,9 @@ h5 {
     min-height: 40px;
 }
 
+.delivtitle {
+ max-width: 100%;
+}
 .topbar-img {
     height: 80vw;
     margin-top: 5vh;
@@ -325,6 +330,11 @@ ul {
 
     #underline1 {
         width: 8.8rem;
+    }
+
+    .subtitle {
+        padding-left: 15px;
+        padding-right: 15px;
     }
 }
 
