--- a/assets/css/hofmann.css
+++ b/assets/css/hofmann.css
@@ -1,3 +1,40 @@
+.square {
+  background-color: white;
+  opacity: 0.2;
+  height: 76vw;
+  width: 76vw;
+  z-index: 0;
+}
+
+.topbar-content {
+  margin-top: 15vw;
+}
+
+figcaption {
+  max-width: 60%;
+  margin-left: 20%;
+  margin-right: 20%;
+  text-align: center;
+  padding-top: 1rem;
+}
+
+.topbar-fig {
+  max-height: 100%;
+  max-width: 100%;
+  position: absolute;
+}
+
+.topbar-img-2 {
+  opacity: 1;
+  height: 76vw;
+  width: 76vw;
+  -o-object-fit: contain;
+     object-fit: contain;
+  z-index: 1;
+  display: block;
+  margin: auto;
+}
+
 .topbar {
   background-color: #E06B65;
 }
@@ -72,9 +109,33 @@
   z-index: 1;
 }
 
+@media (min-width: 768px) {
+  .topbar-img-2 {
+    height: 36vw;
+    width: 36vw;
+  }
+  .square {
+    background-color: white;
+    opacity: 0.2;
+    height: 36vw;
+    width: 36vw;
+  }
+  .topbar-content {
+    margin-top: 10vw;
+  }
+}
+
 @media (min-width: 992px) {
   .pspecial {
     border-image-slice: 0% 100% 0% 0%;
+  }
+  figcaption {
+    max-width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .topbar-content {
+    margin-top: 0;
   }
 }
 /*# sourceMappingURL=hofmann.css.map */
